# ptax_quotes

./: README.md  pyproject.toml  requeriments.txt
ptax/: create_schedules.py  main.py  settings.ini
ptax/api/: twitter_api.py
ptax/core/: log.py  parser_bo_ptax.py  post_tweet.py  utils.py
ptax/output/: quotes.json
